Team8Pings_with_Python_Sunburst
Team8Pings_with_Python_Sunburst

--- a/Team_8_Pings_With_Python_80Quest.ipynb
+++ b/Team_8_Pings_With_Python_80Quest.ipynb
@@ -10,141 +10,148 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e91464f",
+   "id": "3ad11785",
    "metadata": {},
    "source": [
-    "Libraries. : (15 nos.)\n",
-    "**\n",
-    "Pandas\n",
-    "Numpy\n",
+    "Libraries. : (21 nos.)\n",
+    "*****************\n",
+    "1.\tPandas\n",
+    "2.\tNumpy\n",
     "\n",
-    "re\n",
-    "regex\n",
-    "datetime\n",
-    "collections\n",
-    "Counter\n",
+    "3.\tre\n",
+    "4.\tregex\n",
+    "5.\tdatetime\n",
+    "6.\tcollections\n",
+    "7.\tCounter\n",
     "\n",
-    "sqlite3\n",
+    "8.\tsqlite3\n",
+    "9.\tPandasql\n",
     "\n",
-    "Seaborn\n",
-    "matplotlib.pyplot\n",
-    "matplotlib.patches -: Ellipse, Polygon\n",
+    "10.\tSeaborn\n",
+    "11.\tmatplotlib.pyplot\n",
+    "12.\tmatplotlib.patches -: Ellipse, Polygon\n",
+    "13.\tWordCloud\n",
     "\n",
-    "ExcelWriter\n",
-    "ExcelFile\n",
+    "14.\tscipy.stats – norm\n",
+    "15.\tstatistics\n",
     "\n",
-    "Pandasql\n",
-    "psycopg2\n",
+    "16.\tsorted_months_weekdays\n",
+    "17.\tsort_dataframeby_monthorweek\n",
     "\n",
-    "Functions and Methods : Nos-80\n",
-    "***\n",
-    "pd.read_excel()\n",
-    "sns.pairplot()\n",
-    "sns.heatmap()\n",
-    "corr()\n",
-    "iloc[]\n",
-    "np.arange()\n",
-    "plt.figure()\n",
-    "add_axes()\n",
-    "plot()\n",
-    "set_xlabel()\n",
-    "set_ylabel()\n",
-    "set_title()\n",
-    "to_datetime()\n",
-    "boxplot()\n",
-    "jointplot()\n",
-    "pairplot()\n",
-    "set()\n",
-    "carplot()\n",
-    "merge()\n",
-    "loc[lamda ]\n",
-    "loc()\n",
-    "pie()\n",
-    "axis()\n",
-    "show()\n",
-    "explode\n",
-    "connect()\n",
-    "sql()\n",
-    "execute()\n",
-    "cursor()\n",
-    "print()\n",
-    "close()\n",
-    "isna()\n",
-    "sum()\n",
-    "fillna()\n",
-    "histplot()\n",
-    "dt.year\n",
-    "dt.date\n",
-    "dt.time\n",
-    "value_counts()\n",
-    "index()\n",
-    "groupby()\n",
-    "list\n",
-    "tolist()\n",
-    "stack()\n",
-    "unstack()\n",
-    "count()\n",
-    "max()\n",
-    "dt.dates\n",
-    "for loop\n",
-    "upper()\n",
-    "read_csv\n",
-    "findall()\n",
-    "scatterplot()\n",
-    "pivot_table()\n",
-    "rege.split()\n",
-    "sort_values()\n",
-    "min()\n",
-    "apply()\n",
-    "reset_index()\n",
-    "spit()\n",
-    "countplot()\n",
-    "subplot()\n",
-    "xticks()\n",
-    "arange()\n",
-    "reshape()\n",
-    "dot()\n",
-    "rename()\n",
-    "pivot_table()\n",
-    "contains()\n",
-    "use()\n",
-    "rcParams[]\n",
-    "drop()\n",
-    "using of user defined functions\n",
-    "bar()\n",
-    "set_xticks()\n",
-    "max()\n",
-    "avg()\n",
-    "Counter()\n",
-    "timedelta64()\n",
-    "unique()\n",
-    "dropna()\n",
+    "18.\tExcelWriter\n",
+    "19.\tExcelFile\n",
     "\n",
+    "20.\tPandasql\n",
+    "21.\tpsycopg2\n",
+    "22.\tpsycopg2.extras\n",
     "\n",
-    "Charts and Plots : Nos - 17\n",
-    "***\n",
-    "Pair Plot\n",
-    "Heat Maps\n",
-    "Simple plot with fig object\n",
-    "Box Plot\n",
-    "Joint Plot\n",
-    "Pair Plot with Hue\n",
-    "Bar Chart\n",
-    "Pie Chart\n",
-    "MultiPlotting on Same Canvas\n",
-    "MultiBar Chart\n",
-    "Line Chart\n",
-    "Hatched Bar Chart\n",
-    "Scatter Plot\n",
-    "Pie Chart Explode Section\n",
-    "Histogram Chart\n",
-    "Trendlines\n",
-    "Countplot\n",
+    "Functions and Methods : Nos-83\n",
+    "****************************\n",
+    "1.\tpd.read_excel()\n",
+    "2.\tsns.pairplot()\n",
+    "3.\tsns.heatmap()\n",
+    "4.\tcorr()\n",
+    "5.\tiloc[]\n",
+    "6.\tnp.arange()\n",
+    "7.\tplt.figure()\n",
+    "8.\tadd_axes()\n",
+    "9.\tplot()\n",
+    "10.\tset_xlabel()\n",
+    "11.\tset_ylabel()\n",
+    "12.\tset_title()\n",
+    "13.\tto_datetime()\n",
+    "14.\tboxplot()\n",
+    "15.\tjointplot()\n",
+    "16.\tpairplot()\n",
+    "17.\tset()\n",
+    "18.\tcarplot()\n",
+    "19.\tmerge()\n",
+    "20.\tloc[lamda ]\n",
+    "21.\tloc()\n",
+    "22.\tpie()\n",
+    "23.\taxis()\n",
+    "24.\tshow()\n",
+    "25.\texplode\n",
+    "26.\tconnect()\n",
+    "27.\tsql()\n",
+    "28.\texecute()\n",
+    "29.\tcursor()\n",
+    "30.\tprint()\n",
+    "31.\tclose()\n",
+    "32.\tisna()\n",
+    "33.\tsum()\n",
+    "34.\tfillna()\n",
+    "35.\thistplot()\n",
+    "36.\tdt.year\n",
+    "37.\tdt.date\n",
+    "38.\tdt.time\n",
+    "39.\tvalue_counts()\n",
+    "40.\tindex()\n",
+    "41.\tgroupby()\n",
+    "42.\tlist\n",
+    "43.\ttolist()\n",
+    "44.\tstack()\n",
+    "45.\tunstack()\n",
+    "46.\tcount()\n",
+    "47.\tmax()\n",
+    "48.\tdt.dates\n",
+    "49.\tfor loop\n",
+    "50.\tupper()\n",
+    "51.\tread_csv\n",
+    "52.\tfindall()\n",
+    "53.\tscatterplot()\n",
+    "54.\tpivot_table()\n",
+    "55.\trege.split()\n",
+    "56.\tsort_values()\n",
+    "57.\tmin()\n",
+    "58.\tapply()\n",
+    "59.\treset_index()\n",
+    "60.\tspit()\n",
+    "61.\tcountplot()\n",
+    "62.\tsubplot()\n",
+    "63.\txticks()\n",
+    "64.\tarange()\n",
+    "65.\treshape()\n",
+    "66.\tdot()\n",
+    "67.\trename()\n",
+    "68.\tpivot_table()\n",
+    "69.\tcontains()\n",
+    "70.\tuse()\n",
+    "71.\trcParams[]\n",
+    "72.\tdrop()\n",
+    "73.\tusing of user defined functions\n",
+    "74.\tbar()\n",
+    "75.\tset_xticks()\n",
+    "76.\tmax()\n",
+    "77.\tavg()\n",
+    "78.\tCounter()\n",
+    "79.\ttimedelta64()\n",
+    "80.\tunique()\n",
+    "81.\tnunique()\n",
+    "82.\tdropna()\n",
+    "83.\tfetchall()\n",
     "\n",
     "\n",
-    "Additional Analysis(EDA, Statistical) :\n",
-    "******\n",
-    "The above summarises the Additional Analysis(EDA, Statistical) we included in our Python Hackathon."
+    "Charts and Plots : Nos - 18\n",
+    "**********************\n",
+    "1.\tPair Plot\n",
+    "2.\tHeat Maps\n",
+    "3.\tSimple plot with fig object\n",
+    "4.\tBox Plot\n",
+    "5.\tJoint Plot\n",
+    "6.\tPair Plot with Hue\n",
+    "7.\tBar Chart\n",
+    "8.\tPie Chart\n",
+    "9.\tMultiPlotting on Same Canvas\n",
+    "10.\tMultiBar Chart\n",
+    "11.\tLine Chart\n",
+    "12.\tHatched Bar Chart\n",
+    "13.\tScatter Plot\n",
+    "14.\tPie Chart Explode Section\n",
+    "15.\tHistogram Chart\n",
+    "16.\tTrendlines\n",
+    "17.\tCountpllot\n",
+    "18.\tDonut\n"
    ]
   },
   {
