--- a/Team_8_Pings_With_Python_80Quest.ipynb
+++ b/Team_8_Pings_With_Python_80Quest.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ad11785",
+   "id": "e3288036",
    "metadata": {},
    "source": [
     "Libraries. : (21 nos.)\n",
@@ -132,7 +132,7 @@
     "83.\tfetchall()\n",
     "\n",
     "\n",
-    "Charts and Plots : Nos - 18\n",
+    "Charts and Plots : Nos - 19\n",
     "**********************\n",
     "1.\tPair Plot\n",
     "2.\tHeat Maps\n",
@@ -151,7 +151,8 @@
     "15.\tHistogram Chart\n",
     "16.\tTrendlines\n",
     "17.\tCountpllot\n",
-    "18.\tDonut\n"
+    "18.\tDonut\n",
+    "19. Sunburst\n"
    ]
   },
   {
